--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ course-resources
 lecture-slides
 PgHW1Guess_Conv_Word_Maj.pdf
 Assignments/Programming-Assignment-1/PgmHW1Guess_Conv_Word_Maj.pdf
+Course_Resources
+Lists_Stacks_Queues
+Lecture_Slides
