--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Assignments/Programming-Assignment-1/PgmHW1Guess_Conv_Word_Maj.pdf
 Course_Resources
 Lists_Stacks_Queues
 Lecture_Slides
+Assignments/Exercise2/*.pdf
+Assignments/Exercise3/*.pdf
