update comment documentation for all files

--- a/Assignments/Programming_Assignment_2/Makefile
+++ b/Assignments/Programming_Assignment_2/Makefile
@@ -1,12 +1,8 @@
 CXX = c++ 
 CXXFLAGS = -std=c++17
 
-Maximum_Sub_Sum: MaximumSubsequenceSum.cc
+Maximum_Sub_Sum: maximum_subsequence_sum.cc
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-Josephus: josephus.cc
-	$(CXX) $(CXXFLAGS) $^ -o $@
-
-Longest_Sequence: longest_sequence.cc
-	$(CXX) $(CXXFLAGS) $^ -o $@
-
+clean:
+	remove Maximum_Sub_Sum
