--- a/Sorting/Makefile
+++ b/Sorting/Makefile
@@ -4,5 +4,8 @@ CXXFLAGS = -std=c++20
 insertion_sort: insertion_sort.cc
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
+shell_sort: shell_sort.cc
+	$(CXX) $(CXXFLAGS) $^ -o $@
+
 clean:
 	rm insertion_sort
