completed quicksort implementation

--- a/Sorting/Makefile
+++ b/Sorting/Makefile
@@ -1,5 +1,6 @@
 CXX = c++ 
 CXXFLAGS = -std=c++20
+INCLUDE_FLAGS = -I ~/cpp_libs/
 
 insertion_sort: insertion_sort.cc
 	$(CXX) $(CXXFLAGS) $^ -o $@
@@ -10,5 +11,5 @@ shell_sort: shell_sort.cc
 selection_sort: selection_sort.cc
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-clean:
-	rm insertion_sort
+quicksort: quicksort.cc
+	$(CXX) $(CXXFLAGS) $^ -o $@
