--- a/Assignments/Programming_Assignment_3/Makefile
+++ b/Assignments/Programming_Assignment_3/Makefile
@@ -1,6 +1,9 @@
 CXX = g++ 
 CXXFLAGS = -std=c++17
 
+problem1: problem1.cc
+	$(CXX) $(CXXFLAGS) $^ -o $@
+
 problem2: problem2.cc
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
